[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://AudioSystem/AudioManager.gd" type="Script" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="GameManager" type="Node2D" parent="."]

[node name="UIManager" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="Options" type="Button" parent="UIManager"]
margin_left = 936.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 88.0
text = "Options"

[node name="OptionsMenu" type="Control" parent="UIManager"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BGFade" type="ColorRect" parent="UIManager/OptionsMenu"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.47451 )

[node name="MenuBG" type="ColorRect" parent="UIManager/OptionsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -250.0
margin_right = 450.0
margin_bottom = 250.0
color = Color( 0.658824, 0.196078, 0.921569, 1 )

[node name="MainMenu" type="Button" parent="UIManager/OptionsMenu"]
margin_left = 456.0
margin_top = 472.0
margin_right = 568.0
margin_bottom = 512.0
text = "Main Menu"

[node name="HSlider" type="HSlider" parent="UIManager/OptionsMenu"]
margin_left = 576.0
margin_top = 192.0
margin_right = 832.0
margin_bottom = 216.0
min_value = -50.0
max_value = 50.0
rounded = true

[node name="AudioManager" type="Node" parent="."]
script = ExtResource( 3 )

[node name="TestTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="UIManager/OptionsMenu/MainMenu" to="UIManager/OptionsMenu" method="_on_MainMenu_pressed"]
[connection signal="value_changed" from="UIManager/OptionsMenu/HSlider" to="UIManager/OptionsMenu" method="_on_HSlider_value_changed"]
[connection signal="timeout" from="TestTimer" to="." method="_on_TestTimer_timeout"]
