[gd_scene load_steps=3 format=2]

[ext_resource path="res://BubbleFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://OptionsMenu.gd" type="Script" id=3]

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BGFade" type="ColorRect" parent="."]
margin_right = 896.0
margin_bottom = 504.0
color = Color( 0, 0, 0, 0.47451 )

[node name="MenuBG" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -386.0
margin_top = -226.0
margin_right = 382.0
margin_bottom = 222.0
color = Color( 0.658824, 0.196078, 0.921569, 1 )

[node name="MainMenu" type="Button" parent="."]
margin_left = 456.0
margin_top = 472.0
margin_right = 568.0
margin_bottom = 512.0
text = "Main Menu"

[node name="Voice Label" type="Label" parent="."]
margin_left = 64.0
margin_top = 144.0
margin_right = 590.0
margin_bottom = 239.0
text = "Voice Volume"

[node name="VoiceSlider" type="HSlider" parent="."]
margin_left = 616.0
margin_top = 184.0
margin_right = 832.0
margin_bottom = 216.0
min_value = -24.0
max_value = 24.0
rounded = true

[node name="VoiceTimer" type="Timer" parent="VoiceSlider"]
one_shot = true

[node name="Label" type="Label" parent="."]
margin_left = 104.0
margin_top = 50.0
margin_right = 892.0
margin_bottom = 179.0
custom_fonts/font = ExtResource( 1 )
text = "OPTIONS"

[node name="CloseButton" type="Button" parent="."]
margin_left = 936.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 88.0
text = "Options"

[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="value_changed" from="VoiceSlider" to="." method="_on_VoiceSlider_value_changed"]
[connection signal="timeout" from="VoiceSlider/VoiceTimer" to="." method="_on_VoiceTimer_timeout"]
[connection signal="pressed" from="CloseButton" to="." method="_on_CloseButton_pressed"]
